tests/sksl/errors/DuplicateSymbol.glsl
### Compilation failed:

error: 2: symbol 'x' was already defined
int x;
^^^^^
error: 5: symbol 'func' was already defined
void func() {
^^^^^^^^^^^
error: 6: symbol 'y' was already defined
    int y,y;
          ^
3 errors
